latest previously uncommited fixes

--- a/core/admin/src/style.scss
+++ b/core/admin/src/style.scss
@@ -351,8 +351,8 @@ h2 {
       }
 
       &:hover {
-        color: white;
-        background-color: $base-color;
+        color: red;
+        background-color: orange;
       }
     }
   }
